<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mod</name>
  <version>1.1.0</version>
  <description>Maps of Dynamics Package</description>
  <maintainer email="ksatyaki@gmail.com">Chittaranjan Personal</maintainer>
  <maintainer email="chittaranjan.swaminathan@oru.se">Chittaranjan Swaminathan</maintainer>

  <license>LGPLv3</license>

  <url type="website">https://mapsofdynamics.bitbucket.io</url>
  <url type="repository">https://bitbucket.org/mapsofdynamics/mod</url>

  <author email="ksatyaki@gmail.com">Chittaranjan Swaminathan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ompl</depend>
  <depend>boost</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
